--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=auctions-server-1
 spring.output.ansi.enabled=ALWAYS
 server.port=8080
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
