--- a/build.gradle
+++ b/build.gradle
@@ -18,15 +18,16 @@ java {
 }
 
 dependencies {
-	// Spring Boot Starter Web for building web applications
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-web-services'
+	runtimeOnly 'com.h2database:h2'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	// SpringDoc OpenAPI UI Dependency this is needed to use Swagger annotations
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
     
-    // Spring Boot Starter Data JPA for working with JPA and Hibernate
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'	
+}
 
-	// H2 Database for in-memory database
-	runtimeOnly 'com.h2database:h2'
+tasks.named('test') {
+	useJUnitPlatform()
 }
