--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,19 @@
 spring.application.name=auctions-server-1
 spring.output.ansi.enabled=ALWAYS
 server.port=8080
+
+
+spring.datasource.url = jdbc:h2:file:./data/Servidor_StravaDB
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username = usuario
+spring.datasource.password= contrasenia
+
+spring.sql.init.platform =h2
+
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=false
 
